--- a/UPPHercegovina.WebApplication/Views/Posts/Details.cshtml
+++ b/UPPHercegovina.WebApplication/Views/Posts/Details.cshtml
@@ -1,74 +1,100 @@
 ﻿@model UPPHercegovina.WebApplication.Models.Post
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Detalji";
 }
 
-<h2>Details</h2>
+<h2>Detalji obavijesti</h2>
 
-<div>
-    <h4>Post</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Title)
-        </dt>
+    <div class="container">
+        <div class="row">
 
-        <dd>
-            @Html.DisplayFor(model => model.Title)
-        </dd>
+            <div class="col-xs-8"> 
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Text)
-        </dt>
+                <h1>@Html.DisplayFor(model => model.Title_short)</h1>
 
-        <dd>
-            @Html.DisplayFor(model => model.Text)
-        </dd>
+                <hr>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Author)
-        </dt>
+                <p>
+                    <span class="glyphicon glyphicon-time"></span>
+                     Postavljeno @Html.DisplayFor(model => model.PostDate)
+                    <br />
+                    <span class="glyphicon glyphicon-user"></span>
+                    Napisao @Html.DisplayFor(model => model.AuthorName)
+                </p>
 
-        <dd>
-            @Html.DisplayFor(model => model.Author)
-        </dd>
+                <hr>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.PostDate)
-        </dt>
+                <img class="img-responsive" src="@Url.Content(Model.PictureUrl)" alt="">
 
-        <dd>
-            @Html.DisplayFor(model => model.PostDate)
-        </dd>
+                <hr>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.PictureUrl)
-        </dt>
+                <p class="lead">@Html.DisplayFor(model => model.Title)</p>
+                <p>@Html.Raw(HttpUtility.HtmlDecode(ViewBag.TextWithHtml))</p>
 
-        <dd>
-            @Html.DisplayFor(model => model.PictureUrl)
-        </dd>
+            </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Recommended)
-        </dt>
+            <!-- Blog Sidebar Widgets Column -->
+            <div class="col-xs-4">
 
-        <dd>
-            @Html.DisplayFor(model => model.Recommended)
-        </dd>
+                <!-- Blog Search Well -->
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Status)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Status)
-        </dd>
+                <!-- Blog Categories Well -->
+                <div class="well">
+                    <h4>Slične obavijesti</h4>
+                    <div class="row">
+                        <div class="col-lg-6">
 
-    </dl>
-</div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
+                            <ul class="list-unstyled">
+                            @foreach (var item in Model.RelatedPost)
+                            {
+                                <li>
+                                    @Html.ActionLink(item.Title_link, "Details", new { id = @item.Id })
+                                    @*@item.Title_short*@
+                                </li>
+                            }
+                            </ul>
+
+                        </div>
+                        <div class="col-lg-6">
+                            <ul class="list-unstyled">
+                                <li>
+                                    <a href="#">Category Name</a>
+                                </li>
+                                <li>
+                                    <a href="#">Category Name</a>
+                                </li>
+                                <li>
+                                    <a href="#">Category Name</a>
+                                </li>
+                                <li>
+                                    <a href="#">Category Name</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <!-- /.row -->
+                </div>
+
+                <!-- Side Widget Well -->
+
+            </div>
+
+        </div>
+        <!-- /.row -->
+
+        <!-- Footer -->
+        <footer>
+            <div class="row">
+                <div class="col-lg-12">
+                    
+                </div>
+            </div>
+            <!-- /.row -->
+        </footer>
+
+    </div>
+
+    <script src="js/jquery.js"></script>
+    <script src="js/bootstrap.min.js"></script>
