--- a/UPPHercegovina.WebApplication/Views/UserMemberships/Index1.cshtml
+++ b/UPPHercegovina.WebApplication/Views/UserMemberships/Index1.cshtml
@@ -32,29 +32,30 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.MembershipName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.UserFirstLastName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Date)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Approved)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Status)
-        </td>
-        <td>
-            @Html.ActionLink("Izmjeni", "Edit", new { id = item.Id }) |
-            @Html.ActionLink("Detalji", "Details", new { id = item.Id }) |
-            @Html.ActionLink("Obriši", "Delete", new { id = item.Id })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.MembershipName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.UserFirstLastName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Date)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Approved)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Status)
+            </td>
+            <td>
+                @Html.ActionLink("Izmjeni", "Edit", new { id = item.Id }) |
+                @Html.ActionLink("Detalji", "Details", new { id = item.Id }) |
+                @Html.ActionLink("Obriši", "Delete", new { id = item.Id)
+            </td>
+        </tr>
+    }
 
 </table>
