--- a/UPPHercegovina.WebApplication/Views/Posts/Delete.cshtml
+++ b/UPPHercegovina.WebApplication/Views/Posts/Delete.cshtml
@@ -1,14 +1,14 @@
 ﻿@model UPPHercegovina.WebApplication.Models.Post
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Brisanje";
 }
 
-<h2>Delete</h2>
+<h2>Obriši obavijest</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Da li ste sigurni da želite obrisati obavijest?</h3>
 <div>
-    <h4>Post</h4>
+    <h4>Obavijest</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -73,8 +73,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Obriši" class="btn btn-default" /> |
+            @Html.ActionLink("Nazad na listu", "Index")
         </div>
     }
 </div>
