Google maps added, started with PersonProducts and Fields.

--- a/UPPHercegovina.WebApplication/Views/Home/Index.cshtml
+++ b/UPPHercegovina.WebApplication/Views/Home/Index.cshtml
@@ -1,31 +1,1 @@
-﻿@{
-    ViewBag.Title = "Home Page";
-}
-
-<div class="jumbotron">
-    <h1>@ViewData["Apa"]</h1>
-    <p class="lead">@ViewBag.test</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
-
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
+﻿<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11645.217756274022!2d17.780679!3d43.140136!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x134b71ebb96a8601%3A0x91940240c9a9f212!2sDomanovi%C4%87i%2C+Bosnia+and+Herzegovina!5e0!3m2!1sen!2sba!4v1475755205668" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
