--- a/UPPHercegovina.WebApplication/Views/Posts/Details.cshtml
+++ b/UPPHercegovina.WebApplication/Views/Posts/Details.cshtml
@@ -6,47 +6,47 @@
 
 <h2>Detalji obavijesti</h2>
 
-    <div class="container">
-        <div class="row">
+<div class="container">
+    <div class="row">
 
-            <div class="col-xs-8"> 
+        <div class="col-xs-8">
 
-                <h1>@Html.DisplayFor(model => model.Title_short)</h1>
+            <label id="txtTest"></label>
 
-                <hr>
+            <h1>@Html.DisplayFor(model => model.Title_short)</h1>
 
-                <p>
-                    <span class="glyphicon glyphicon-time"></span>
-                     Postavljeno @Html.DisplayFor(model => model.PostDate)
-                    <br />
-                    <span class="glyphicon glyphicon-user"></span>
-                    Napisao @Html.DisplayFor(model => model.AuthorName)
-                </p>
+            <hr>
 
-                <hr>
+            <p>
+                <span class="glyphicon glyphicon-time"></span>
+                Postavljeno @Html.DisplayFor(model => model.PostDate)
+                <br />
+                <span class="glyphicon glyphicon-user"></span>
+                Napisao @Html.DisplayFor(model => model.AuthorName)
+            </p>
 
-                <img class="img-responsive" src="@Url.Content(Model.PictureUrl)" alt="">
+            <hr>
 
-                <hr>
+            <img class="img-responsive" src="@Url.Content(Model.PictureUrl)" alt="">
 
-                <p class="lead">@Html.DisplayFor(model => model.Title)</p>
-                <p>@Html.Raw(HttpUtility.HtmlDecode(ViewBag.TextWithHtml))</p>
+            <hr>
 
-            </div>
+            <p class="lead">@Html.DisplayFor(model => model.Title)</p>
+            <p>@Html.Raw(HttpUtility.HtmlDecode(ViewBag.TextWithHtml))</p>
 
-            <!-- Blog Sidebar Widgets Column -->
-            <div class="col-xs-4">
+        </div>
 
-                <!-- Blog Search Well -->
+        <!-- Blog Sidebar Widgets Column -->
+        <div class="col-xs-4">
 
 
-                <!-- Blog Categories Well -->
-                <div class="well">
-                    <h4>Slične obavijesti</h4>
-                    <div class="row">
-                        <div class="col-lg-6">
+            <!-- Blog Categories Well -->
+            <div class="well">
+                <h4>Slične obavijesti</h4>
+                <div class="row">
+                    <div class="col-xs-12">
 
-                            <ul class="list-unstyled">
+                        <ul class="list-unstyled">
                             @foreach (var item in Model.RelatedPost)
                             {
                                 <li>
@@ -54,47 +54,141 @@
                                     @*@item.Title_short*@
                                 </li>
                             }
-                            </ul>
+                        </ul>
 
-                        </div>
-                        <div class="col-lg-6">
-                            <ul class="list-unstyled">
-                                <li>
-                                    <a href="#">Category Name</a>
-                                </li>
-                                <li>
-                                    <a href="#">Category Name</a>
-                                </li>
-                                <li>
-                                    <a href="#">Category Name</a>
-                                </li>
-                                <li>
-                                    <a href="#">Category Name</a>
-                                </li>
-                            </ul>
-                        </div>
                     </div>
-                    <!-- /.row -->
+
                 </div>
-
-                <!-- Side Widget Well -->
-
+                <!-- /.row -->
             </div>
+
+
+            <div class="well">
+                <h4>Preporučene obavijesti</h4>
+                <div class="row">
+                    <div class="col-xs-12">
+
+                        <ul class="list-unstyled">
+                            @foreach (var item in Model.RecommendedPost)
+                            {
+                                <li>
+                                    @Html.ActionLink(item.Title_link, "Details", new { id = @item.Id })
+                                    @*@item.Title_short*@
+                                </li>
+                            }
+                        </ul>
+
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="well">
+                <h4>Zadnje obavijesti</h4>
+                <div class="row">
+                    <div class="col-xs-12">
+
+                        <ul class="list-unstyled">
+                            @foreach (var item in Model.LastPost)
+                            {
+                                <li>
+                                    @Html.ActionLink(item.Title_link, "Details", new { id = @item.Id })
+                                    @*@item.Title_short*@
+                                </li>
+                            }
+                        </ul>
+
+                    </div>
+
+                </div>
+            </div>
+
+            @*Google Maps*@
+            <div class="=well">
+                <h4>Naša skladišta</h4>
+                <div class="row">
+                    <div class="col-xs-12" style="height:300px;">
+                        <div id="map" style="height:100%;"></div>
+                        <script>
+                            var map;
+                            function initMap() {
+                                map = new google.maps.Map(document.getElementById('map'), {
+                                    center: { lng: @ViewBag.Location.GeographicPosition.Longitude, lat: @ViewBag.Location.GeographicPosition.Latitude },
+                                    zoom: 8
+                                });
+
+                                var markeri = @Html.Raw(Json.Encode(@ViewBag.Markers));
+
+                                for(i=0; i< markeri.length; i++)
+                                {
+
+                                    console.log("markeri", markeri[i])
+                                    var m = new google.maps.Marker({
+                                        position: {lat: parseFloat(markeri[i].GeographicPosition.Latitude), lng: parseFloat(markeri[i].GeographicPosition.Longitude)},
+                                        animation: google.maps.Animation.DROP,
+                                        draggable: true,
+                                        map: map,
+                                        title: markeri[i].Name
+                                    });
+
+                                    Toggle(m);
+
+                                    m.addListener('click', Toggle);
+                                    m.setMap(map);
+                                }
+
+                                function Toggle(m){
+                                    if (m.getAnimation() !== null) {
+                                        m.setAnimation(null);
+                                    } else {
+                                        m.setAnimation(google.maps.Animation.BOUNCE);
+                                    }
+
+
+                                    google.maps.event.addListener(map, 'click', function (event) {
+                                        displayCoordinates(event.latLng);
+                                    });
+
+                                    function displayCoordinates(pnt) {
+
+                                        var lat = pnt.lat();
+                                        lat = lat.toFixed(4);
+                                        var lng = pnt.lng();
+                                        lng = lng.toFixed(4);
+                                        txtTest.textContent = lng;
+                                        console.log("Latitude: " + lat + "  Longitude: " + lng);
+
+                                        var t = new google.maps.Marker({
+                                            position: {lat: parseFloat(lat), lng: parseFloat(lng)},
+                                            animation: google.maps.Animation.DROP,
+                                            map: map,
+                                            title: 'Sigurno želite ovdje postaviti ?'
+                                        });
+                                    }
+                                };
+                            }
+                        </script>
+                        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCZ0Bah24dB4oqaIN9peo9nnFAnboZjzmY&callback=initMap"
+                                async defer></script>
+                    </div>
+                </div>
+            </div>
+            @*Google Maps*@
 
         </div>
-        <!-- /.row -->
-
-        <!-- Footer -->
-        <footer>
-            <div class="row">
-                <div class="col-lg-12">
-                    
-                </div>
-            </div>
-            <!-- /.row -->
-        </footer>
 
     </div>
 
-    <script src="js/jquery.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <footer>
+        <div class="row">
+            <div class="col-lg-12">
+
+            </div>
+        </div>
+        <!-- /.row -->
+    </footer>
+
+</div>
+
+@*<script src="js/jquery.js"></script>
+    <script src="js/bootstrap.min.js"></script>*@
