--- a/UPPHercegovina.WebApplication/Views/PersonProducts/Details.cshtml
+++ b/UPPHercegovina.WebApplication/Views/PersonProducts/Details.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = "Details";
+    Layout = "~/Views/Shared/_LayoutPageUser.cshtml";
 }
 
 <h2>Details</h2>
@@ -51,14 +52,6 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Coordinates)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Coordinates)
-        </dd>
-
-        <dt>
             @Html.DisplayNameFor(model => model.ExparationDate)
         </dt>
 
@@ -88,6 +81,46 @@
 
         <dd>
             @Html.DisplayFor(model => model.WarehouseId)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.FieldId)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.FieldId)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Damaged)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Damaged)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.CircaValue)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.CircaValue)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Urgently)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Urgently)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Status)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Status)
         </dd>
 
     </dl>
