--- a/UPPHercegovina.WebApplication/Views/Townships/Create.cshtml
+++ b/UPPHercegovina.WebApplication/Views/Townships/Create.cshtml
@@ -40,7 +40,19 @@
         </div>
 
         <div class="form-group">
+            @Html.LabelFor(model => model.GeographicPosition.Longitude, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.GeographicPosition.Longitude, new { htmlAttributes = new { @class = "form-control", placeholder = "Geografska dužina" } })
+                @Html.ValidationMessageFor(model => model.GeographicPosition.Longitude, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
+        <div class="form-group">
+            @Html.LabelFor(model => model.GeographicPosition.Latitude, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.GeographicPosition.Latitude, new { htmlAttributes = new { @class = "form-control", placeholder = "Geografska širina" } })
+                @Html.ValidationMessageFor(model => model.GeographicPosition.Latitude, "", new { @class = "text-danger" })
+            </div>
         </div>
 
 
