--- a/UPPHercegovina.WebApplication/Views/Townships/Edit.cshtml
+++ b/UPPHercegovina.WebApplication/Views/Townships/Edit.cshtml
@@ -33,10 +33,26 @@
                    }, "Text", "Value");
         }
         <div class="form-group">
-            <label class="control-label col-md-2">Entitet</label>
+            @Html.LabelFor(model => model.Entity, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownListFor(model => model.Entity, @items, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Entity, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.GeographicPosition.Longitude, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.GeographicPosition.Longitude, new { htmlAttributes = new { @class = "form-control", placeholder = "Geografska dužina" } })
+                @Html.ValidationMessageFor(model => model.GeographicPosition.Longitude, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.GeographicPosition.Latitude, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.GeographicPosition.Latitude, new { htmlAttributes = new { @class = "form-control", placeholder = "Geografska širina" } })
+                @Html.ValidationMessageFor(model => model.GeographicPosition.Latitude, "", new { @class = "text-danger" })
             </div>
         </div>
 
