--- a/UPPHercegovina.WebApplication/Views/PersonProducts/Edit.cshtml
+++ b/UPPHercegovina.WebApplication/Views/PersonProducts/Edit.cshtml
@@ -1,18 +1,18 @@
 ﻿@model UPPHercegovina.WebApplication.Models.PersonProduct
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Izmjena proizvoda";
     Layout = "~/Views/Shared/_LayoutPageUser.cshtml";
 }
 
-<h2>Edit</h2>
+<h2>Izmjeni proizvod</h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>PersonProduct</h4>
+        <h4>Proizvodi</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
@@ -109,5 +109,5 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Nazad na listu", "Index")
 </div>
