--- a/UPPHercegovina.WebApplication/Views/Fields/Create.cshtml
+++ b/UPPHercegovina.WebApplication/Views/Fields/Create.cshtml
@@ -52,7 +52,70 @@
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
         </div>
+    <div class="=well">
+        <h4>Naša skladišta</h4>
+        <div class="row">
+            <div class="col-xs-4" style="height:300px;">
+                <div id="map" style="height:100%;"></div>
+                <script>
+                    var map;
+                    var x = false;
+                            function initMap() {
+                                map = new google.maps.Map(document.getElementById('map'), {
+                                    center: { lng: @ViewBag.Location.GeographicPosition.Longitude, lat: @ViewBag.Location.GeographicPosition.Latitude },
+                                    zoom: 8
+                                });
+
+                                google.maps.event.addListener(map, 'click', function (event) {
+                                    if(x!=true)
+                                        displayCoordinates(event.latLng);
+                                    if(x==true)
+                                        clearMarkers();
+
+                                    console.log("X: ", x)
+                                   
+                                });
+                          
+                                function clearMarkers(){
+                                    setMapOnAll(null);
+                                }
+
+                                function setMapOnAll(map) {
+                                    for (var i = 0; i < markers.length; i++) {
+                                        markers[i].setMap(map);
+                                    }
+                                }
+
+                               function displayCoordinates(pnt) {
+
+                                    var lat = pnt.lat();
+                                    lat = lat.toFixed(4);
+                                    var lng = pnt.lng();
+                                    lng = lng.toFixed(4);
+                                    
+                                    console.log("Latitude: " + lat + "  Longitude: " + lng);                                    
+                                                
+                                    var t = new google.maps.Marker({
+                                        position: {lat: parseFloat(lat), lng: parseFloat(lng)},
+                                        animation: google.maps.Animation.DROP,
+                                        map: map,
+                                        title: 'Sigurno želite ovdje postaviti ?'
+                                    });
+                                  
+                                    x = true;
+                                    
+                                }
+
+                            }
+                </script>
+                <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCZ0Bah24dB4oqaIN9peo9nnFAnboZjzmY&callback=initMap"
+                        async defer></script>
+            </div>
+        </div>
     </div>
+    </div>
+
+
 }
 
 <div>
