--- a/UPPHercegovina.WebApplication/Views/Fields/Index.cshtml
+++ b/UPPHercegovina.WebApplication/Views/Fields/Index.cshtml
@@ -1,22 +1,19 @@
 ﻿@model IEnumerable<UPPHercegovina.WebApplication.Models.Field>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Zemljišta";
     Layout = "~/Views/Shared/_LayoutPageUser.cshtml";
 }
 
-<h2>Index</h2>
+<h2>Zemljišta</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Dodaj novo zemljište", "Create")
 </p>
 <table class="table">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Details)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.GeoLong)
@@ -36,21 +33,18 @@
             @Html.DisplayFor(modelItem => item.Name)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Details)
-        </td>
-        <td>
             @Html.DisplayFor(modelItem => item.GeoLong)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.GeoLat)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.OwnerId)
+            @Html.DisplayFor(modelItem => item.Owner.FullName)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            @Html.ActionLink("Izmjeni", "Edit", new { id=item.Id }) |
+            @Html.ActionLink("Detalji", "Details", new { id=item.Id }) |
+            @Html.ActionLink("Obriši", "Delete", new { id=item.Id })
         </td>
     </tr>
 }
