--- a/UPPHercegovina.WebApplication/Views/PersonProducts/Index.cshtml
+++ b/UPPHercegovina.WebApplication/Views/PersonProducts/Index.cshtml
@@ -1,22 +1,32 @@
 ﻿@model IEnumerable<UPPHercegovina.WebApplication.Models.PersonProduct>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Proizvodi u ponudi";
     Layout = "~/Views/Shared/_LayoutPageUser.cshtml";
 }
 
-<h2>Index</h2>
+<h2>Proizvodi u ponudi</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Dodaj novi proizvod u ponudu", "Create")
 </p>
+
+@using (Html.BeginForm("Index", "PersonProducts"))
+{
+    <div class="form-group">
+        <div class="col-md-10">
+            @Html.DropDownList("States", null, htmlAttributes: new { @class = "form-control" })
+        </div>
+    </div>
+
+    <input type="submit" value="Pretraga" />
+}
+
+
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.UserId)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ProductId)
+            @Html.DisplayNameFor(model => model.Product.Name)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.HarvestDate)
@@ -31,25 +41,10 @@
             @Html.DisplayNameFor(model => model.ExparationDate)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Quality)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.WarehouseId)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.FieldId)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Damaged)
+            @Html.DisplayNameFor(model => model.Field.Name)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.CircaValue)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Urgently)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Status)
         </th>
         <th></th>
     </tr>
@@ -57,13 +52,10 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.UserId)
+            @Html.DisplayFor(modelItem => item.Product.Name)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.ProductId)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.HarvestDate)
+            @Html.DisplayFor(modelItem => item.HarvestOnlyDate)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Neto)
@@ -72,33 +64,18 @@
             @Html.DisplayFor(modelItem => item.Bruto)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.ExparationDate)
+            @Html.DisplayFor(modelItem => item.ExparationOnlyDate)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Quality)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.WarehouseId)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.FieldId)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Damaged)
+            @Html.DisplayFor(modelItem => item.Field.Name)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.CircaValue)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Urgently)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Status)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            @Html.ActionLink("Izmjeni", "Edit", new { id=item.Id }) |
+            @Html.ActionLink("Detalji", "Details", new { id=item.Id }) |
+            @Html.ActionLink("Obriši", "Delete", new { id=item.Id })
         </td>
     </tr>
 }
